# mcqc

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker_build.yml  dockerhub.yml
mcqc/: _version.py  cli.py
