[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "mcqc"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
  "pandas",
  "numpy",
  "scikit-learn",
  "scipy",
]

[project.scripts]
mcqc = "mcqc.cli:main"

[tool.setuptools]
packages = ["mcqc"]

[tool.setuptools_scm]
version_file = "mcqc/_version.py"